--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title></title>
   </head>
   <body>
-<section class="homepage">
-
-</section>
+    <section class="homepage">
+      <img class="logo" src="https://www.metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg">
+      <h1 class="form-header"> Get Tickets Now</h1>
+        <form class="register-form">
+          <input type="text">
+          <input type="submit">
+        </form>
+      </section>
   </body>
 </html>
