--- a/complete.html
+++ b/complete.html
@@ -14,7 +14,7 @@
       </section>
       <script>
         let text = document.getElementById('thanksHeader');
-        text.innerText = "Thank you for registering " + window.location.search.split('name=')[1];
+        text.innerText = "Thank you for registering, " + window.location.search.split('name=')[1];
         </script>
   </body>
 </html>
